# midi-rig

./: .clang-format  CMakeLists.txt
src/midi/: MidiEvent.cpp  MidiEvent.h
